# CursoEmVideo

./: README.md  ex001.py  ex006.py  ex008.py  ex009.py  ex010.py  ex011.py  ex015.py  ex016.py  ex017.py  ex019.py  ex020.py  ex021.py  ex022.py  ex023.py  ex024.py  ex028.py  ex029.py  ex030.py  ex031.py  ex032.py  ex033.py  ex040.py  ex044.py  ex046.py  ex047.py  ex048.py  ex051.py  ex052.py  ex054.py  ex055.py  ex057.py  ex059.py  ex061.py  ex063.py  ex064.py  ex069.py  pyproject.toml
Python/: ex002.py  ex003.py  ex004.py  ex009.py  ex014.py  ex037.py  ex038.py  ex042.py  ex043.py  ex058.py  ex067.py  ex071.py  ex072.py
Python3/Mundo 1/: ex007.py  ex012.py  ex026.py  ex034.py
Python3/Mundo 2/: ex039.py  ex045.py  ex050.py  ex053.py  ex056.py  ex068.py
Python3/Mundo 3/: ex072.py  ex073.py
Python3/Mundo1/: ex005.py  ex013.py  ex018.py  ex025.py  ex027.py  ex035.py
Python3/Mundo2/: ex036.py  ex041.py  ex049.py  ex060.py  ex062.py  ex065.py  ex070.py
Python3/Mundo3/: ex073.py  ex074.py  ex075.py  ex076.py
