[tool.poetry]
name = "cursoemvideo"
version = "0.1.0"
description = "Exercícios feitos no decorrer dos módulos do curso de python disponível no Curso em Vídeo"
authors = ["Maria Fernanda Caetano"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
