[tool.poetry]
name = "cursoemvideo"
version = "0.1.0"
description = ""
authors = ["Maria Fernanda Caetano <nanda2001caetano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
